<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ch.rasc.hibppasswords</groupId>
  <artifactId>importer</artifactId>
  <version>1.1.0</version>
  <packaging>jar</packaging>
  <name>hibppasswords-importer</name>

  <description>Have I Been Pwned passwords Xodus database importer</description>
  <url>https://github.com/ralscha/selfhost-hibp-passwords</url>
  <inceptionYear>2019</inceptionYear>

  <licenses>
    <license>
      <name>Apache 2</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Ralph Schaer</name>
      <email>ralphschaer@gmail.com</email>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git@github.com:ralscha/selfhost-hibp-passwords.git</connection>
    <developerConnection>scm:git:git@github.com:ralscha/selfhost-hibp-passwords.git</developerConnection>
    <url>https://github.com/ralscha/selfhost-hibp-passwords.git</url>
  </scm>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/ralscha/selfhost-hibp-passwords/issues</url>
  </issueManagement>

  <properties>
    <maven.compiler.release>25</maven.compiler.release>
  </properties>

  <dependencies>
    <dependency>
      <groupId>ch.rasc.hibppasswords</groupId>
      <artifactId>query</artifactId>
      <version>1.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.xodus</groupId>
      <artifactId>xodus-environment</artifactId>
      <version>2.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.18</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.17</version>
    </dependency>
  </dependencies>

  <build>
    <finalName>hibp-passwords-importer</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <release>25</release>

          <fork>true</fork>
          <compilerArgs>
            <arg>-XDcompilePolicy=simple</arg>
            <arg>--should-stop=ifError=FLOW</arg>
            <arg>-Xplugin:ErrorProne</arg>
            <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>com.google.errorprone</groupId>
              <artifactId>error_prone_core</artifactId>
              <version>2.49.0</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.2</version>
        <executions>
          <execution>
            <goals>
              <goal>shade</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>ch.rasc.hibppasswords.importer.HibpPasswordsImporter</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>4.6</version>
        <configuration>
          <header>${basedir}/../config/header.txt</header>
          <properties>
            <year>${project.inceptionYear}</year>
          </properties>
          <excludes>
            <exclude>**/*.xml</exclude>
            <exclude>**/*.md</exclude>
            <exclude>**/*.py</exclude>
            <exclude>LICENSE</exclude>
            <exclude>.travis.yml</exclude>
            <exclude>**/.gitignore</exclude>
            <exclude>.factorypath</exclude>
            <exclude>.mvn/**/*</exclude>
            <exclude>mvnw.cmd</exclude>
            <exclude>mvnw</exclude>
            <exclude>.apt_generated/**</exclude>
            <exclude>.editorconfig</exclude>
          </excludes>
          <strictCheck>true</strictCheck>
        </configuration>
        <executions>
          <execution>
            <id>check-headers</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <version>4.0.0</version>
        <configuration>
          <createBackupFile>false</createBackupFile>
          <nrOfIndentSpace>2</nrOfIndentSpace>
          <sortProperties>false</sortProperties>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
